Fix hyperlinks on IOS

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -17,3 +17,7 @@ html, body {
   margin: 0;
   padding: 0;
 }
+
+a {
+  color: #000000;
+}
